src/capi/gbm_capi.h

// The public C ABI for the Flutter UI. This is the only header the Dart FFI
// bindings (app_flutter/lib/data/ffi/gbm_bindings.dart, generated by ffigen)
// are generated from, and the only header anything outside src/capi should
// include. Everything here is extern "C": no C++ types cross this boundary.
//
// Two data-marshalling conventions are used, matching the plan's "JSON for
// structured/low-frequency data, packed binary for the graph" split:
//
//  * Scalar calls (checkout, ...) take plain C parameters and return an
//    int32_t status: 0 or positive on success, a negative value that is the
//    negated ordinal of gbm::GitError::Code on failure (0 = Unknown, -1 =
//    Unknown, i.e. negate-then-subtract-one avoided: see GBM_ERR below).
//  * Structured snapshots (repo state, discovered repos) are returned as
//    JSON through a thread-local staging buffer: call the function that
//    produces the result, then gbm_last_result_json_len() and
//    gbm_last_result_json_copy() immediately after, on the same thread.
//  * The commit graph is exposed as packed binary buffers
//    (gbm_graph_snapshot_*) whose layout matches gbm::GraphSnapshot exactly
//    -- see src/core/graph/GraphSnapshot.h. These are zero-copy views valid
//    until the next gbm_graph_snapshot_rows() call for the same session or
//    an explicit gbm_graph_snapshot_release().
//  * Asynchronous results (history refresh, checkout) are delivered through
//    a per-session event callback registered with gbm_register_callback().
//    The callback may be invoked from any native thread -- a ThreadPool
//    worker or the operation runner's serial thread -- never from the
//    thread that called gbm_register_callback(). On the Dart side this is
//    exactly what NativeCallable.listener is for. A non-empty payload is
//    heap-allocated by this library and MUST be released by calling
//    gbm_free_event_payload() once the receiver is done reading it.

#pragma once

#include <stdint.h>

#if defined(_WIN32)
#define GBM_API extern "C" __declspec(dllexport)
#else
#define GBM_API extern "C" __attribute__((visibility("default")))
#endif

// --- Handles -----------------------------------------------------------

typedef void* GbmSessionHandle;
typedef void* GbmDiscoveryHandle;

// --- Errors --------------------------------------------------------------
// Mirrors gbm::GitError::Code (src/core/base/Error.h) 1:1. A scalar call
// returns 0 on success and -(1 + code-ordinal) on failure, so GBM_ERR_UNKNOWN
// (ordinal 0) maps to -1 and 0 stays unambiguously "success".

enum GbmErrorCode {
    GBM_ERR_UNKNOWN = 0,
    GBM_ERR_NOT_FOUND = 1,
    GBM_ERR_INVALID_ARGUMENT = 2,
    GBM_ERR_CONFLICT = 3,
    GBM_ERR_LOCK_HELD = 4,
    GBM_ERR_AUTH = 5,
    GBM_ERR_HOST_KEY = 6,
    GBM_ERR_NON_FAST_FORWARD = 7,
    GBM_ERR_DIRTY_WORK_TREE = 8,
    GBM_ERR_HOOK_REJECTED = 9,
    GBM_ERR_CANCELLED = 10,
    GBM_ERR_PROCESS_FAILED = 11,
    GBM_ERR_SPAWN_FAILED = 12,
    GBM_ERR_PARSE_ERROR = 13,
    GBM_ERR_CORRUPT = 14,
    GBM_ERR_UNSUPPORTED = 15,
    GBM_ERR_TIMEOUT = 16,
    GBM_ERR_TOO_LARGE = 17,
    GBM_ERR_DATABASE = 18,
    GBM_ERR_IO = 19,
};

// --- Events ----------------------------------------------------------------
// One ordinal per RepositorySession Qt signal this bridge replaces (see
// src/app/bridge/RepositorySession.h:505-598). Only the M0/M1 subset is
// defined so far; later milestones extend this enum, never renumber it.

enum GbmEventType {
    GBM_EVENT_GRAPH_UPDATED = 0,       ///< payload: {"complete": bool}
    GBM_EVENT_REFS_UPDATED = 1,        ///< no payload
    GBM_EVENT_ERROR_OCCURRED = 2,      ///< payload: GitError JSON
    GBM_EVENT_OPERATION_FINISHED = 3,  ///< payload: OperationOutcome JSON
};

typedef void (*GbmEventCallback)(GbmSessionHandle session,
                                  int32_t eventType,
                                  const uint8_t* payload,
                                  int32_t payloadLen,
                                  void* userData);

/// Frees a payload buffer handed to a GbmEventCallback. Safe to call only
/// once per payload, and only after the callback that received it has
/// finished reading it. A null or already-freed pointer is not accepted.
GBM_API void gbm_free_event_payload(const uint8_t* payload);

// --- Thread-local synchronous-result staging buffer -------------------------
// Populated by any function documented "populates the staging buffer".
// Always drain it (len, then copy) on the same thread and before the next
// such call on that thread -- it is thread-local, not per-session.

GBM_API int32_t gbm_last_result_json_len(void);
GBM_API void gbm_last_result_json_copy(uint8_t* out, int32_t outLen);

// --- Session lifecycle -------------------------------------------------

/// Opens a repository. `commonDir` may be empty (defaults to gitDir) for a
/// non-worktree repository. Detects the git executable fresh each call is
/// avoided: detection is cached process-wide after the first successful
/// open. Returns null and populates the staging buffer with a GitError JSON
/// on failure (e.g. no usable git on PATH).
GBM_API GbmSessionHandle gbm_session_open(const char* workDir,
                                          const char* gitDir,
                                          const char* commonDir);

/// Cancels any in-flight work and releases the session. `session` must not
/// be used again afterwards.
GBM_API void gbm_session_close(GbmSessionHandle session);

/// Registers the event callback for this session. Replaces any previously
/// registered callback. Must be called before any async-producing call
/// (gbm_history_refresh, gbm_branch_checkout) if events are to be observed.
GBM_API void gbm_register_callback(GbmSessionHandle session,
                                   GbmEventCallback callback,
                                   void* userData);

// --- Repository state --------------------------------------------------

/// Populates the staging buffer with the current RepoState as JSON.
/// Returns 0 on success.
GBM_API int32_t gbm_repo_state_json(GbmSessionHandle session);

// --- History / graph -----------------------------------------------------

/// Requests a refs + history refresh. Runs on a shared background worker;
/// never blocks the calling thread. Fires GBM_EVENT_REFS_UPDATED once refs
/// are read, then one or more GBM_EVENT_GRAPH_UPDATED as the walk streams
/// (the last has payload {"complete": true}), or GBM_EVENT_ERROR_OCCURRED on
/// failure.
GBM_API void gbm_history_refresh(GbmSessionHandle session);

/// Populates the staging buffer with the most recently published RefSnapshot
/// (branches, tags, HEAD) as JSON. Returns 0 on success, or a negative
/// GbmErrorCode if gbm_history_refresh() has not yet published one.
GBM_API int32_t gbm_refs_json(GbmSessionHandle session);

/// Row-parallel packed GraphSnapshot::RowMeta buffer (16 bytes/row, see
/// src/core/graph/GraphSnapshot.h). Pins the underlying snapshot until the
/// next call to this function for the same session or
/// gbm_graph_snapshot_release(). Null with *rowCount == 0 if no snapshot has
/// been published yet.
GBM_API const uint8_t* gbm_graph_snapshot_rows(GbmSessionHandle session,
                                               int32_t* rowCount,
                                               int32_t* rowStride);

/// Packed ObjectId buffer, one 33-byte entry per row, same row order and
/// pinning as gbm_graph_snapshot_rows().
GBM_API const uint8_t* gbm_graph_snapshot_oids(GbmSessionHandle session,
                                               int32_t* oidCount,
                                               int32_t* oidStride);

/// Packed RowId (uint32) parent-pool buffer; see RowMeta::parentOffset.
GBM_API const uint32_t* gbm_graph_snapshot_parents(GbmSessionHandle session,
                                                    int32_t* parentCount);

/// Packed GraphSnapshot::Edge buffer (16 bytes/edge).
GBM_API const uint8_t* gbm_graph_snapshot_edges(GbmSessionHandle session,
                                                int32_t* edgeCount,
                                                int32_t* edgeStride);

GBM_API int32_t gbm_graph_snapshot_lane_count(GbmSessionHandle session);
GBM_API int32_t gbm_graph_snapshot_complete(GbmSessionHandle session);
GBM_API int32_t gbm_graph_snapshot_truncated(GbmSessionHandle session);

/// Releases the pinned snapshot from the last gbm_graph_snapshot_rows() call.
/// Safe to call even if nothing is pinned.
GBM_API void gbm_graph_snapshot_release(GbmSessionHandle session);

// --- Branches ------------------------------------------------------------

/// `git switch`/`git checkout`. Async: fires GBM_EVENT_OPERATION_FINISHED
/// with an OperationOutcome JSON payload, and on success also triggers the
/// same refresh gbm_history_refresh() would (so REFS_UPDATED/GRAPH_UPDATED
/// follow). String parameters must be UTF-8 and non-null (pass "" for
/// absent); boolean parameters are 0/1.
GBM_API void gbm_branch_checkout(GbmSessionHandle session,
                                 const char* target,
                                 int32_t detach,
                                 int32_t createBranch,
                                 const char* newBranchName,
                                 int32_t force,
                                 int32_t stashFirst,
                                 int32_t recurseSubmodules);

// --- Discovery -------------------------------------------------------------
// A separate handle class from GbmSessionHandle: discovery scans base
// folders and is not tied to any one open repository -- see
// src/core/cache/RepoIndexDb.h / src/core/discovery/Scanner.h.

/// Opens (creating and migrating if needed) the repo index database at
/// `dbPath`, or an in-memory database when `dbPath` is empty. Returns null
/// and populates the staging buffer with a GitError JSON on failure.
GBM_API GbmDiscoveryHandle gbm_discovery_open(const char* dbPath);

GBM_API void gbm_discovery_close(GbmDiscoveryHandle discovery);

/// Registers a folder to scan. Returns the new base folder's row id (>= 0),
/// or a negative GbmErrorCode on failure.
GBM_API int64_t gbm_discovery_add_base_folder(GbmDiscoveryHandle discovery,
                                              const char* path,
                                              int32_t maxDepth,
                                              int32_t followLinks);

/// Scans every enabled base folder synchronously (blocks the calling
/// thread -- callers should run this off the UI isolate, e.g. via Dart's
/// Isolate.run). Returns 0 on success (even if some folders had nothing new)
/// or a negative GbmErrorCode.
GBM_API int32_t gbm_discovery_scan_all(GbmDiscoveryHandle discovery);

/// Populates the staging buffer with every known repository (including
/// those currently missing) as a JSON array. Returns 0 on success.
GBM_API int32_t gbm_discovery_list_repos_json(GbmDiscoveryHandle discovery);